--- a/frontend/src/css/output.css
+++ b/frontend/src/css/output.css
@@ -1823,6 +1823,10 @@ html {
   bottom: -45px;
 }
 
+.bottom-\[-5px\] {
+  bottom: -5px;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -1931,6 +1935,42 @@ html {
   top: 8px;
 }
 
+.bottom-\[-3px\] {
+  bottom: -3px;
+}
+
+.bottom-\[-4px\] {
+  bottom: -4px;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.top-\[-15px\] {
+  top: -15px;
+}
+
+.top-\[-20px\] {
+  top: -20px;
+}
+
+.top-\[-23px\] {
+  top: -23px;
+}
+
+.top-\[-25px\] {
+  top: -25px;
+}
+
+.top-\[-27px\] {
+  top: -27px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1982,10 +2022,6 @@ html {
 
 .mb-7 {
   margin-bottom: 1.75rem;
-}
-
-.mb-\[-3px\] {
-  margin-bottom: -3px;
 }
 
 .mb-\[15px\] {
@@ -2052,6 +2088,14 @@ html {
   margin-top: 18px;
 }
 
+.mb-\[-3px\] {
+  margin-bottom: -3px;
+}
+
+.mb-\[-5px\] {
+  margin-bottom: -5px;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -2100,12 +2144,20 @@ html {
   height: 1rem;
 }
 
+.h-40 {
+  height: 10rem;
+}
+
 .h-48 {
   height: 12rem;
 }
 
 .h-5 {
   height: 1.25rem;
+}
+
+.h-64 {
+  height: 16rem;
 }
 
 .h-7 {
@@ -2134,6 +2186,10 @@ html {
 
 .h-\[210px\] {
   height: 210px;
+}
+
+.h-\[24px\] {
+  height: 24px;
 }
 
 .h-\[25px\] {
@@ -2174,6 +2230,10 @@ html {
 
 .h-\[65px\] {
   height: 65px;
+}
+
+.h-\[70px\] {
+  height: 70px;
 }
 
 .h-auto {
@@ -2268,6 +2328,10 @@ html {
   width: 180px;
 }
 
+.w-\[24px\] {
+  width: 24px;
+}
+
 .w-\[25px\] {
   width: 25px;
 }
@@ -2290,6 +2354,10 @@ html {
 
 .w-\[38px\] {
   width: 38px;
+}
+
+.w-\[40px\] {
+  width: 40px;
 }
 
 .w-\[45px\] {
@@ -2354,6 +2422,10 @@ html {
 
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
 }
 
 .translate-x-\[-50\%\] {
@@ -2836,6 +2908,11 @@ html {
   padding-bottom: 1.25rem;
 }
 
+.py-\[1\.5px\] {
+  padding-top: 1.5px;
+  padding-bottom: 1.5px;
+}
+
 .py-\[100px\] {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -3002,6 +3079,10 @@ html {
   font-size: 25px;
 }
 
+.text-\[35px\] {
+  font-size: 35px;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -3025,6 +3106,11 @@ html {
 
 .tracking-wider {
   letter-spacing: 0.05em;
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .text-gray-400 {
@@ -3056,6 +3142,16 @@ html {
 .text-green-300 {
   --tw-text-opacity: 1;
   color: rgb(134 239 172 / var(--tw-text-opacity));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.text-orange-500 {
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
 .text-red-500 {
@@ -3178,6 +3274,14 @@ html {
     left: 180px;
   }
 
+  .md\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
   .md\:hidden {
     display: none;
   }
@@ -3210,6 +3314,10 @@ html {
     justify-content: space-between;
   }
 
+  .md\:gap-2 {
+    gap: 0.5rem;
+  }
+
   .md\:gap-8 {
     gap: 2rem;
   }
@@ -3218,8 +3326,21 @@ html {
     gap: 97px;
   }
 
+  .md\:rounded {
+    border-radius: 0.25rem;
+  }
+
   .md\:border-r {
     border-right-width: 1px;
+  }
+
+  .md\:p-1 {
+    padding: 0.25rem;
+  }
+
+  .md\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 
   .md\:pl-\[180px\] {
@@ -3232,6 +3353,11 @@ html {
 
   .md\:pl-\[210px\] {
     padding-left: 210px;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
